Changes in contactUs and aboutUs pages

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
 	<!-- parallax js -->
 	<script defer type="text/javascript" src="parallax.min.js"></script>
+	<!-- jquery UI -->
+	<script defer
+  	src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  	integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  	crossorigin="anonymous"></script>
 	<script defer src="index.js"></script>
 </head>
 <body class="body">
@@ -100,7 +105,7 @@
         </button>        
         <!-- 16:9 aspect ratio -->
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="Assets/video.mp4" id="video"  allowscriptaccess="always" allow="autoplay"></iframe>
+  <iframe class="embed-responsive-item" src="Assets/video.mp4" id="video"  allowscriptaccess="always" allow="autoplay" style="width: 100%"></iframe>
 </div>
         
         
