--- a/contact us.html
+++ b/contact us.html
@@ -82,15 +82,16 @@
 		<div class="address">
 			<h3>HEADQUATERS</h3>
 			<p><i class="fas fa-map-marker-alt fa-lg"></i> &nbsp; No.16, Path-03, Floor 07, Souk Al Kuwait Complex,<br>
-				&nbsp; &nbsp; &nbsp; &nbsp;Commercial Area - 08 Mubarak Al Kabeer Street, Block No:1,<br> &nbsp; &nbsp; &nbsp; &nbsp;KUWAIT</p>
+				&nbsp; &nbsp; &nbsp; &nbsp;Commercial Area - 08 Mubarak Al Kabeer Street, Block No:1, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;KUWAIT</p>
 
 				<h3>PHONE</h3>
 				<p><i class="fas fa-phone"></i>&nbsp; &nbsp;Tel: +965 22254250 <br> &nbsp; &nbsp; &nbsp; &nbsp;Mob: +965 50422913</p>
 				<p><i class="fas fa-envelope"></i>&nbsp; &nbsp;Email: info@equilibriumkwt.com</p>
 		</div>
-		<div class="map">
+		<div class="mapDiv">
 			<h3 style="text-align: center; margin-left: -20%">Location</h3>
-			<img src="Assets/map.jpg">
+			<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d573.2151979117383!2d47.97550643385048!3d29.375781970765072!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d29.3759685!2d47.9755241!5e0!3m2!1sen!2sin!4v1566072393853!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<!-- <img src="Assets/map.jpg"> -->
 		</div>
 	</div>
 </body>
