--- a/Fabrication.html
+++ b/Fabrication.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html>
 <head>
 	
-	<title>Equilibrium | About us</title>
+	<title>Equilibrium | Fabrication</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Font Awesome -->
@@ -26,8 +26,11 @@
 	<!-- Parallax library -->
 	<script defer async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<!-- <script defer async src="index.js"></script> -->
+	<link rel="stylesheet" type="text/css" href="Fabrication.css">
+	<title>Fabrication</title>
 </head>
 <body>
+
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navbar p-0">
 		<div class="container">
 			<div class="navbar-header" id="orange-shape">
@@ -47,8 +50,8 @@
     	  			<li class="nav-item dropdown mx-2">
     	    			<a class="nav-link dropdown-toggle" id="navbarProductsMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Products</a>
     	    			<div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          					<a class="dropdown-item" href="General Trading.html">General Trading.html</a>
-          					<a class="dropdown-item" href="Fabrication.html">Fabrication</a>
+          					<a class="dropdown-item" href="General Trading.html">General Trading</a>
+          					<a class="dropdown-item active" href="Fabrication.html">Fabrication</a>
           					<a class="dropdown-item" href="Aqua.html">Aqua</a>
         				</div>
     	  			</li>
@@ -60,9 +63,9 @@
           					<a class="dropdown-item" href="#">Link</a>
         				</div>
     	  			</li><li class="nav-item mx-2">
-    	    			<a class="nav-link" href="contact us.html">Contact Us</a>
-    	  			</li><li class="nav-item active mx-2">
-    	    			<a class="nav-link" href="#">About Us</a>
+    	    			<a class="nav-link" href="#">Contact Us</a>
+    	  			</li><li class="nav-item mx-2">
+    	    			<a class="nav-link" href="whoweare.html">About Us</a>
     	  			</li>
     			</ul>
   			</div>
@@ -72,22 +75,10 @@
 		
 	</nav>
 
-<div class="main-section">
 
-	<h3>Mission</h3>
-
-	<p>Equilibrium committed to delivering quality, reliability, reasonable and best support services that provides business values to our clients, enabling them to achieve there desired goals and initiatives. We use our expertise and strengths to the benefits of our customers, become there trusted partners and successfully deliver our products and services with the highest standards of implementation, integration and support services.</p>
-
-
-	<h3>About us</h3>
-
-	<p>Equilibrium was incorporated as a fast growing company and well established in the state of Kuwait. We are supporting US Army and their Contractors, Companies in Oil Sector and other local companies in Kuwait related to Trading, Heavy Equipment Rent & Leasing, HR (Manpower-Local & Outsourcing), Engineering solutions, Civil & Mechanical works, Maintenance works. The quality services, commitment, consistency and above all our timely support & delivery made our company to grow to the level which we are now and also the confidence we got from our customers makes us to expand to further activities and areas. 
-
-	The individual and collective effort of our experienced team members enables us to provide a total business solution to our clients in a timely manner in terms of quality, reliability and price. We have a core team of qualified engineering & skilled labors to take up the challenge for any assigned project to complete well in time with the excellence and diligence. Supported by well-equipped workshop, tools & vehicles, we offer our supporting services with the motive to associate with you for your forthcoming, existing Construction & Maintenance projects.</p>
-
-	<h3>Vision</h3>
-
-	<p>Our Vision is to become the leading and the most trusted and reliable company in the region through getting close to our customers, understanding the businesses and establishing a long term relationship with them and create a sustainable competitive advantage for our customers.</p>
-</div>
+	<h4>Storage Tanks</h4>
+	<h4>Offsite and Plant Piping</h4>
+	<h4>Equipment Erection</h4>
+	<h4>Shut down work in refineries</h4>
+	<h4>Specilised fabrication and erection involving stainless steel and alloy steel</h4>
 </body>
-</html>
