--- a/General Trading.html
+++ b/General Trading.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html>
 <head>
 	
-	<title>Equilibrium | About us</title>
+	<title>Equilibrium | General Trading</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Font Awesome -->
@@ -26,8 +26,11 @@
 	<!-- Parallax library -->
 	<script defer async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<!-- <script defer async src="index.js"></script> -->
+	<link rel="stylesheet" type="text/css" href="General Trading.css">
+	<title>General Trading</title>
 </head>
 <body>
+
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navbar p-0">
 		<div class="container">
 			<div class="navbar-header" id="orange-shape">
@@ -47,7 +50,7 @@
     	  			<li class="nav-item dropdown mx-2">
     	    			<a class="nav-link dropdown-toggle" id="navbarProductsMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Products</a>
     	    			<div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          					<a class="dropdown-item" href="General Trading.html">General Trading.html</a>
+          					<a class="dropdown-item active" href="General Trading.html">General Trading</a>
           					<a class="dropdown-item" href="Fabrication.html">Fabrication</a>
           					<a class="dropdown-item" href="Aqua.html">Aqua</a>
         				</div>
@@ -60,9 +63,9 @@
           					<a class="dropdown-item" href="#">Link</a>
         				</div>
     	  			</li><li class="nav-item mx-2">
-    	    			<a class="nav-link" href="contact us.html">Contact Us</a>
-    	  			</li><li class="nav-item active mx-2">
-    	    			<a class="nav-link" href="#">About Us</a>
+    	    			<a class="nav-link" href="#">Contact Us</a>
+    	  			</li><li class="nav-item mx-2">
+    	    			<a class="nav-link" href="whoweare.html">About Us</a>
     	  			</li>
     			</ul>
   			</div>
@@ -72,22 +75,67 @@
 		
 	</nav>
 
-<div class="main-section">
 
-	<h3>Mission</h3>
-
-	<p>Equilibrium committed to delivering quality, reliability, reasonable and best support services that provides business values to our clients, enabling them to achieve there desired goals and initiatives. We use our expertise and strengths to the benefits of our customers, become there trusted partners and successfully deliver our products and services with the highest standards of implementation, integration and support services.</p>
-
-
-	<h3>About us</h3>
-
-	<p>Equilibrium was incorporated as a fast growing company and well established in the state of Kuwait. We are supporting US Army and their Contractors, Companies in Oil Sector and other local companies in Kuwait related to Trading, Heavy Equipment Rent & Leasing, HR (Manpower-Local & Outsourcing), Engineering solutions, Civil & Mechanical works, Maintenance works. The quality services, commitment, consistency and above all our timely support & delivery made our company to grow to the level which we are now and also the confidence we got from our customers makes us to expand to further activities and areas. 
-
-	The individual and collective effort of our experienced team members enables us to provide a total business solution to our clients in a timely manner in terms of quality, reliability and price. We have a core team of qualified engineering & skilled labors to take up the challenge for any assigned project to complete well in time with the excellence and diligence. Supported by well-equipped workshop, tools & vehicles, we offer our supporting services with the motive to associate with you for your forthcoming, existing Construction & Maintenance projects.</p>
-
-	<h3>Vision</h3>
-
-	<p>Our Vision is to become the leading and the most trusted and reliable company in the region through getting close to our customers, understanding the businesses and establishing a long term relationship with them and create a sustainable competitive advantage for our customers.</p>
-</div>
+	<!-- <h1>General Trading</h1> -->
+	<div class="productsDiv">
+		<h3>Ceramic Bonding Griding Wheel</h3>
+		<div class="cbgw">
+			<img src="Assets/cbgw/cbgw1.jpg">
+			<img src="Assets/cbgw/cbgw2.jpg">
+			<img src="Assets/cbgw/cbgw3.jpg">
+			<img src="Assets/cbgw/cbgw4.jpg">
+			<img src="Assets/cbgw/cbgw5.jpg">
+		</div>
+		<h3>Cutting wheel and Grinding wheel</h3>
+		<div class="cwgw">
+			<img src="Assets/cwgw/cwgw1.jpg">
+			<img src="Assets/cwgw/cwgw2.jpg">
+			<img src="Assets/cwgw/cwgw3.jpg">
+			<img src="Assets/cwgw/cwgw4.jpg">
+			<img src="Assets/cwgw/cwgw5.jpg">
+			<img src="Assets/cwgw/cwgw6.jpg">
+			<img src="Assets/cwgw/cwgw7.jpg">
+		</div>
+		<h3>Polishing Wheel</h3>
+		<div class="pw">
+			<img src="Assets/pw/pw1.jpg">
+			<img src="Assets/pw/pw2.jpg">
+			<img src="Assets/pw/pw3.jpg">
+			<img src="Assets/pw/pw4.jpg">
+			<img src="Assets/pw/pw5.jpg">
+			<img src="Assets/pw/pw6.jpg">
+			<img src="Assets/pw/pw7.jpg">
+			<img src="Assets/pw/pw8.jpg">
+			<img src="Assets/pw/pw9.jpg">
+			<img src="Assets/pw/pw10.jpg">
+			<img src="Assets/pw/pw11.jpg">
+			<img src="Assets/pw/pw12.png">
+			<img src="Assets/pw/pw13.png">
+			<img src="Assets/pw/pw14.png">
+		</div>
+		<h3>Flap Wheel</h3>
+		<div class="fw">
+			<img src="Assets/fw/fw1.jpg">
+			<img src="Assets/fw/fw2.jpg">
+			<img src="Assets/fw/fw3.jpg">
+			<img src="Assets/fw/fw4.jpg">
+			<img src="Assets/fw/fw5.jpg">
+			<img src="Assets/fw/fw6.jpg">
+		</div>
+		<h3>Sharpening Stone</h3>
+		<div class="sharpeningStone">
+			<img src="Assets/ss/ss1.jpg">
+			<img src="Assets/ss/ss2.jpg">
+			<img src="Assets/ss/ss3.jpg">
+			<img src="Assets/ss/ss4.jpg">
+			<img src="Assets/ss/ss5.jpg">
+			<img src="Assets/ss/ss6.jpg">
+			<img src="Assets/ss/ss7.jpg">
+			<img src="Assets/ss/ss8.jpg">
+			<img src="Assets/ss/ss9.jpg">
+			<img src="Assets/ss/ss10.jpg">
+			<img src="Assets/ss/ss11.jpg">
+		</div>
+	</div>
 </body>
 </html>
