Completed Fabrication page without slideshow

--- a/Fabrication.html
+++ b/Fabrication.html
@@ -25,8 +25,12 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.5/js/mdb.min.js"></script>
 	<!-- Parallax library -->
 	<script defer async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<!-- <script defer async src="index.js"></script> -->
-	<link rel="stylesheet" type="text/css" href="Fabrication.css">
+	
+	<link defer rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
+	<link defer rel="stylesheet" type="text/css" href="Fabrication.css">
+	<script defer type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script defer async src="Fabrication.js"></script>
 	<title>Fabrication</title>
 </head>
 <body>
@@ -76,9 +80,32 @@
 	</nav>
 
 
-	<h4>Storage Tanks</h4>
-	<h4>Offsite and Plant Piping</h4>
-	<h4>Equipment Erection</h4>
-	<h4>Shut down work in refineries</h4>
-	<h4>Specilised fabrication and erection involving stainless steel and alloy steel</h4>
+
+	<!-- <div class="parallax-window" data-parallax="scroll" data-image-src="Assets/General Trading.jpg" data-speed="0"></div> -->
+	<div class="fabricaationSs">
+		<!-- <div><img src="Assets/Fabrication/f1.jpg"></div> -->
+		<!-- <div><img src="Assets/Fabrication/f2.jpg"></div> -->
+		<div><img src="Assets/Fabrication/f5.jpg" style="width: 100%"></div>
+	</div>
+	<div class="fabricationBody">	
+		<h4>Storage Tanks</h4>	
+		<p>Double walled LPG, LNG tanks, CRYOGENIC TANKS, Fixed roof tanks, Dome roof tanks, Floating roof tanks, Column tanks, 	Edible oil storage tanks, Water storage tanks, Silos etc. </p>
+		<h4>Offsite and Plant Piping</h4>
+		<p>- Small bore and large bore piping, fabrication, erection and testing.<br>
+  			- Fire hydrant system.</p>
+		<h4>Equipment Erection</h4>
+			<h4>Shut down work in refineries</h4>
+			<h4>Specilised fabrication and erection involving stainless steel and alloy steel</h4>
+	
+		<h4>Some of the work carried out are as below:</h4>
+		<p>- Providing total Project Services including Design, Detailed Engineering, and Project Management for Site Fabrication Tanks, SS Tanks, POL-Depot & Structural works.</br>
+       - Supply, Fabrication, Erection, Welding Testing & Painting of All Types of Storage Tanks (API-650, IS 803, AWWA) Silos Etc. including construction of Civil / Sand Pad &nbsp;&nbsp;Foundation.</br>
+       - Fabrication, Erection, Welding of all Types of Steel Structures for Plants & Utility Buildings.</br>
+       - Erection and Alignment of Static & Rotary Equipments.</br>
+       - Supply, Fabrication, Erection, Welding & Testing of All types of piping jobs.(CS/SS).</br>
+       - Equipment Foundation, Pipe sleepers, Pipe Pedestals, Utility Building & related civil jobs.</br>
+       - Supply & application of internal & External Painting of pipes.</p>
+	</div>
+
+       
 </body>
