--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     	    			<a class="nav-link dropdown-toggle" id="navbarProductsMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Products</a>
     	    			<div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
           					<a class="dropdown-item" href="General Trading.html">General Trading</a>
-          					<a class="dropdown-item" href="#">Fabrication</a>
-          					<a class="dropdown-item" href="#">Aqua</a>
+          					<a class="dropdown-item" href="Fabrication.html">Fabrication</a>
+          					<a class="dropdown-item" href="Aqua.html">Aqua</a>
         				</div>
     	  			</li>
     	  			<li class="nav-item dropdown mx-2">
@@ -123,16 +123,16 @@
 
 	<!-- <div class="parallax-window" data-parallax="scroll" data-image-src="Assets/General Trading.jpg" data-speed="0.2"> -->
 	<div class="parallax-window" data-parallax="scroll" data-image-src="Assets/General Trading.jpg" data-speed="0">
-		<div class="" id="pipingSection" style="z-index: 0">
-		<div class="main-section">
-			<h1 class="text-center">Welcome</h1>
-			<!-- <h2 class="text-center">Mechanical & Piping</h2> -->
-			<!-- <h3 class="text-center">Section</h3> -->
-			<p>Lorem ipsum dolor</p>
-			<button class="btn btn-outline-primary waves-effect"><i class="fas fa-chevron-right fa-3x"></i></button>
-		</div>
+		<div id="pipingSection" style="z-index: 0">
+			<div class="main-section">
+				<h1 class="text-center">Welcome</h1>
+				<!-- <h2 class="text-center">Mechanical & Piping</h2> -->
+				<!-- <h3 class="text-center">Section</h3> -->
+				<p>Lorem ipsum dolor</p>
+				<button class="btn btn-outline-primary waves-effect"><i class="fas fa-chevron-right fa-3x"></i></button>
+			</div>
 
-	</div>
+		</div>
 	</div>
 
 	<div class="container-fluid p-0">
