--- a/whoweare.html
+++ b/whoweare.html
@@ -47,7 +47,7 @@
     	  			<li class="nav-item dropdown mx-2">
     	    			<a class="nav-link dropdown-toggle" id="navbarProductsMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Products</a>
     	    			<div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          					<a class="dropdown-item" href="General Trading.html">General Trading.html</a>
+          					<a class="dropdown-item" href="General Trading.html">General Trading</a>
           					<a class="dropdown-item" href="Fabrication.html">Fabrication</a>
           					<a class="dropdown-item" href="Aqua.html">Aqua</a>
         				</div>
