--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
 		<div id="routingSection">
 			<div class="route1">
 				<div class="body-content col-4 ml-5">
+					<br>
 					<header>
 						<h1>General Trading</h1>
 					</header>
 					<body>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+							<br>
+							We are also dealing with industrial supplies linke resin-bonded abrasives and ceramic bonded grinding wheels.
 						</p>
 					</body>
 				</div>
@@ -166,10 +166,9 @@
 					</header>
 					<body>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
-							quis nostrud exercitation ullamco.
+							Fabrication and Erection of Structural and Piping surface blasting & Painting(Structural, Pipes, Tanks, Vessels etc.)
+							<br>
+							Electrical Erection, Testing & commisioning works instrumentation calibration, erection,  pre-commissioning.
 						</p>
 					</body>
 				</div>
@@ -183,14 +182,12 @@
 					</header>
 					<body>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+							EA deals in chilled and frozen marine products. We are leading exporters of a plethore of chilled sea food such as Black Grouper, Tiger Grouper, Red Snapper, Black Pomfret, Chinese Pomfret, Seer Fish, Coral Troul, Silver Pomfret, Anchovy, Prawns, Squids, Nussels Lobsters, Crabs and oysters to name a few.
 						</p>
 					</body>
 				</div>
 
-				<div class="col-6 ml-auto">
+				<div class="col-6 ml-auto mt-4">
 					<img src="Assets/Aqua1.jpg" alt="Aqua" style="height: 228.5px; width: 400px; text-align: center">
 				</div>
 			</div>
