--- a/Aqua.html
+++ b/Aqua.html
@@ -26,7 +26,7 @@
 	<!-- Parallax library -->
 	<script defer async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<!-- <script defer async src="index.js"></script> -->
-	<link rel="stylesheet" type="text/css" href="Fabrication.css">
+	<link rel="stylesheet" type="text/css" href="Aqua.css">
 	<title>Fabrication</title>
 </head>
 <body>
@@ -74,6 +74,17 @@
 		
 	</nav>
 
+<div class="aquaDiv">
+	<!-- <img src="Assets/Aqua/f1.jpg"> -->
+	<img src="Assets/Aqua/f2.jpg">
+	<img src="Assets/Aqua/f3.jpg">
+	<img src="Assets/Aqua/f4.jpg">
+	<img src="Assets/Aqua/f5.jpg">
+	<img src="Assets/Aqua/f6.jpg">
+	<img src="Assets/Aqua/f7.jpg">
+	<img src="Assets/Aqua/f8.jpg">
+	<img src="Assets/Aqua/f9.jpg">
+</div>
 
 	
 </body>
