ui changes- Navbar brand and shapes changed

--- a/Aqua.html
+++ b/Aqua.html
@@ -55,15 +55,17 @@
           					<a class="dropdown-item active" href="Aqua.html">Aqua</a>
         				</div>
     	  			</li>
-    	  			<li class="nav-item dropdown mx-2">
+    	  			<!-- <li class="nav-item dropdown mx-2">
     	    			<a class="nav-link dropdown-toggle" id="navbarServicesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Services</a>
     	    			<div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
           					<a class="dropdown-item" href="#">Technical Manpower</a>
           					<a class="dropdown-item" href="#">Industrial Project</a>
         				</div>
-    	  			</li><li class="nav-item mx-2">
+    	  			</li> -->
+    	  			<li class="nav-item mx-2">
     	    			<a class="nav-link" href="contact us.html">Contact Us</a>
-    	  			</li><li class="nav-item mx-2">
+    	  			</li>
+    	  			<li class="nav-item mx-2">
     	    			<a class="nav-link" href="whoweare.html">About Us</a>
     	  			</li>
     			</ul>
@@ -75,15 +77,70 @@
 	</nav>
 
 <div class="aquaDiv">
-	<!-- <img src="Assets/Aqua/f1.jpg"> -->
-	<img src="Assets/Aqua/f2.jpg">
-	<img src="Assets/Aqua/f3.jpg">
-	<img src="Assets/Aqua/f4.jpg">
-	<img src="Assets/Aqua/f5.jpg">
-	<img src="Assets/Aqua/f6.jpg">
-	<img src="Assets/Aqua/f7.jpg">
-	<img src="Assets/Aqua/f8.jpg">
-	<img src="Assets/Aqua/f9.jpg">
+	<div>
+		<img src="Assets/Aqua/f1.jpg">
+		<figcaption style="text-align: center;">Plain Grouper</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/f2.jpg">
+		<figcaption style="text-align: center;">Mackrel</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/f3.jpg">
+		<figcaption style="text-align: center;">Parrot Fish</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/f4.jpg">
+		<figcaption style="text-align: center;">Prawns Ocean Black Tiger</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/f5.jpg">
+		<figcaption style="text-align: center;">Rock Lobster</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/f6.jpg">
+		<figcaption style="text-align: center;">Prawns Sea White</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/f7.jpg">
+		<figcaption style="text-align: center;">Prawns Vanammei</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/f8.jpg">
+		<figcaption style="text-align: center;">Squids</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/f9.jpg">
+		<figcaption style="text-align: center;">Red Spotted Grouper</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/af1.jpg">
+		<figcaption style="text-align: center;">Black Spotted Grouper</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/af2.jpg">
+		<figcaption style="text-align: center;">Lithin</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/af3.jpg">
+		<figcaption style="text-align: center;">Tiger Grouper</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/af4.jpg">
+		<figcaption style="text-align: center;">Tomato Grouper</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/af5.jpg">
+		<figcaption style="text-align: center;">Silver Pomfret</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/af6.jpg">
+		<figcaption style="text-align: center;">Chinese Pomfret</figcaption>
+	</div>
+	<div>
+		<img src="Assets/Aqua/af7.jpg">
+		<figcaption style="text-align: center;">Red Snapper</figcaption>
+	</div>
 </div>
 
 	
