--- a/whoweare.html
+++ b/whoweare.html
@@ -52,15 +52,17 @@
           					<a class="dropdown-item" href="Aqua.html">Aqua</a>
         				</div>
     	  			</li>
-    	  			<li class="nav-item dropdown mx-2">
+    	  			<!-- <li class="nav-item dropdown mx-2">
     	    			<a class="nav-link dropdown-toggle" id="navbarServicesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Services</a>
     	    			<div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
           					<a class="dropdown-item" href="#">Technical Manpower</a>
           					<a class="dropdown-item" href="#">Industrial Project</a>
         				</div>
-    	  			</li><li class="nav-item mx-2">
+    	  			</li> -->
+    	  			<li class="nav-item mx-2">
     	    			<a class="nav-link" href="contact us.html">Contact Us</a>
-    	  			</li><li class="nav-item active mx-2">
+    	  			</li>
+    	  			<li class="nav-item active mx-2">
     	    			<a class="nav-link" href="#">About Us</a>
     	  			</li>
     			</ul>
