--- a/whoweare.html
+++ b/whoweare.html
@@ -31,8 +31,9 @@
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navbar p-0">
 		<div class="container">
 			<div class="navbar-header" id="orange-shape">
-				<a class="navbar-brand pl-5" href="#"><img src="Assets/logo.png"></a>
+				&nbsp;
 			</div>
+			<a class="navbar-brand" href="#"><img src="Assets/logo.png"></a>
 		
 	  
 	  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" 
