--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						</p>
 					</body>
 				</div>
-				<div class="col-6 ml-auto">
+				<div class="col-6-lg col-4-sm ml-auto">
 					<div class="gtLayerMask">
 						<img src="Assets/General Trading.jpg" alt="General Trading image" style="height: 228.5px; width: 400px; text-align: center; opacity: 0.5;">
 					</div>
