ui changes- Completed responsiveness for 768*1024 devices

--- a/General Trading.html
+++ b/General Trading.html
@@ -36,7 +36,7 @@
 			<div class="navbar-header" id="orange-shape">
 				&nbsp;
 			</div>
-			<a class="navbar-brand pl-5" href="#"><img src="Assets/logo.png"></a>
+			<a class="navbar-brand" href="#"><img src="Assets/logo.png"></a>
 		
 	  
 	  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" 
