--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				</div>
 			</div>
 			<div class="route2">
-				<div class="col-5 mr-auto">
+				<div class="col-6-lg col-4-sm mr-auto">
 					<img src="Assets/Fabrication.jpg" alt="Fabrication" style="height: 228.5px; width: 400px; text-align: center; ">
 				</div>
 				<div class="body-content col-5 ml-auto mr-4">
@@ -190,7 +190,7 @@
 					</body>
 				</div>
 
-				<div class="col-6 ml-auto mt-4">
+				<div class="col-6-lg col-4-sm ml-auto mt-4">
 					<img src="Assets/Aqua1.jpg" alt="Aqua" style="height: 228.5px; width: 400px; text-align: center">
 				</div>
 			</div>
