added mail functionality

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 				<p>Email: info@equilibriumkwt.com</p>
 			</div>
 			<div id="enquiry">
-				<form method="POST" action="/index.php">
+				<form method="POST" action="controllers/index.php">
 					<!--Form-->
 					<div class="card-block">
 					
