--- a/contact us.html
+++ b/contact us.html
@@ -46,7 +46,7 @@
     	    			<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
     	  			</li>
     	  			<li class="nav-item dropdown mx-2">
-    	    			<a class="nav-link dropdown-toggle" id="navbarProductsMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Products</a>
+    	    			<a class="nav-link dropdown-toggle" id="navbarProductsMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Services</a>
     	    			<div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
           					<a class="dropdown-item" href="General Trading.html">General Trading</a>
           					<a class="dropdown-item" href="Fabrication.html">Fabrication</a>
