--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	
 
 	</div> -->
-<!-- <div>
+<div>
 	<button type="button" id="play-video" class="btn btn-primary video-btn d-none" data-toggle="modal" data-src="Assets/video.mp4" data-target="#myModal">
   Play
 	</button>
@@ -119,7 +119,7 @@
   
   
   
-</div> -->
+</div>
 
 
 
