--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
        				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
           				<span aria-hidden="true">&times;</span>
         			</button>        
-        			16:9 aspect ratio
+        			<!-- 16:9 aspect ratio -->
 					<div class="embed-responsive embed-responsive-16by9">
   						<iframe class="embed-responsive-item" src="Assets/video.mp4" id="video"  allowscriptaccess="always" allow="autoplay" style="width: 100%"></iframe>
 					</div>
